03_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
  labels:
    app: open-webui
  name: open-webui
  namespace: __NAMESPACE__
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: open-webui
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: open-webui
    spec:
      containers:
      - image: ghcr.io/open-webui/open-webui:ollama
        imagePullPolicy: IfNotPresent
        name: open-webui
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: "10Gi"   # Request 10GB (guaranteed)
            cpu: "8"         # Request 8 CPUs (guaranteed)
          limits:
            memory: "12Gi"   # Maximum 12GB memory
            cpu: "12"        # Maximum 12 CPUs
        lifecycle:
          postStart:
            exec:
              command:
              - /bin/sh
              - -c
              - cd /app/backend/data && ollama run deepseek-r1:1.5b & ollama run qwen:0.5b && wait
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/backend/data
          name: open-webui
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: open-webui
        persistentVolumeClaim:
          claimName: open-webui
