05_svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: open-webui
  name: open-webui
  namespace: __NAMESPACE__
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    deployment: open-webui
