06_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-www
  namespace: __NAMESPACE__
spec:
  ingressClassName: traefik
  rules:
  - host: __FQDN__
    http:
      paths:
      - backend:
          service:
            name: open-webui
            port:
              number: 8080
        path: /
        pathType: Prefix
